# croniot-watering-system

./: CMakeLists.txt  OPTIMIZACIONES_RED.txt  README.md  SensorsInitializer.cpp  SensorsInitializer.h  TasksInitializer.cpp  TasksInitializer.h  ccache.py  custompart.csv  enable_ccache.py  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32-c6-devkitc-1.old  sdkconfig.old
Sensors/: ADS1115Controller.cpp  ADS1115Controller.h  CMakeLists.txt  SensorCurrentTime.cpp  SensorCurrentTime.h  SensorDefs.h  SensorRamUsage.cpp  SensorRamUsage.h  SensorSolarPanel.cpp  SensorSolarPanel.h  SensorWiFiInfo.cpp  SensorWiFiInfo.h
Sensors/Battery/: SensorBattery.cpp  SensorBattery.h
Tasks/: TaskLedSlider.cpp  TaskLedSlider.h  TaskLedSwitch.cpp  TaskLedSwitch.h  TaskLedTest.cpp  TaskLedTest.h  TaskWaterPlants.cpp  TaskWaterPlants.h  TaskWaterPumpSwitch.cpp  TaskWaterPumpSwitch.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
src/: SensorsInitializer.cpp  SensorsInitializer.h  TasksInitializer.cpp  TasksInitializer.h  main.cpp  secrets_mock.h
src/Sensors/: ADS1115Controller.cpp  ADS1115Controller.h  SensorBattery.cpp  SensorBattery.h  SensorBatteryVoltage.cpp  SensorBatteryVoltage.h  SensorCurrentTime.cpp  SensorCurrentTime.h  SensorDefs.h  SensorRamUsage.cpp  SensorRamUsage.h  SensorSolarPanel.cpp  SensorSolarPanel.h  SensorWiFiInfo.cpp  SensorWiFiInfo.h  SensorWiFiStrength.cpp  SensorWiFiStrength.h
src/Tasks/: TaskLedSwitch.cpp  TaskLedSwitch.h  TaskLedTest.cpp  TaskLedTest.h  TaskWaterPlants.cpp  TaskWaterPlants.h  TaskWaterPumpSwitch.cpp  (+1 more)
(+5 files in other folders)
